<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.abhaychauhan.www.udacityunofficialclient.FreeCourseDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/free_course_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/course_image_height"
            android:scaleType="centerCrop"
            android:visibility="gone"
            tools:src="@drawable/default_course_image" />

        <TextView
            android:id="@+id/free_course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/list_item_padding_tb"
            android:textSize="@dimen/free_course_title_size"
            tools:text="@string/free_course_title" />

        <TextView
            android:id="@+id/free_course_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:fontFamily="sans-serif-light"
            tools:text="@string/free_course_subtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/free_course_gap"
            android:orientation="horizontal"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/free_course_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                tools:text="Duration\nApprox. 2 weeks" />

            <TextView
                android:id="@+id/free_course_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/level_circle"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:text="Beginner" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/list_item_margin_tb"
            android:fontFamily="sans-serif-medium"
            android:text="@string/course_summary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/free_course_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            tools:text="@string/free_course_short_summary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/list_item_margin_tb"
            android:fontFamily="sans-serif-medium"
            android:text="@string/expected_learning_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/free_course_expected_learning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            tools:text="@string/expected_learning" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/list_item_margin_tb"
            android:fontFamily="sans-serif-medium"
            android:text="@string/course_syllabus"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/free_course_syllabus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            tools:text="@string/expected_learning" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"></View>

        <Button
            android:id="@+id/button_view_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/list_item_margin_tb"
            android:layout_marginTop="@dimen/list_item_margin_tb"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/button_view_course"
            android:textColor="@android:color/white" />


    </LinearLayout>


</ScrollView>
