<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/list_item_padding_tb"
    android:paddingEnd="@dimen/list_item_padding_lr"
    android:paddingLeft="@dimen/list_item_padding_lr"
    android:paddingRight="@dimen/list_item_padding_lr"
    android:paddingStart="@dimen/list_item_padding_lr"
    android:paddingTop="@dimen/list_item_padding_tb">

    <TextView
        android:id="@+id/track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/track_name_size"
        tools:text="@string/track_name" />

    <TextView
        android:id="@+id/track_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:textSize="@dimen/track_description_size"
        tools:text="@string/free_course_short_summary" />

    <TextView
        android:id="@+id/track_no_of_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/list_item_padding_lr"
        android:background="@drawable/level_circle"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        tools:text="@string/track_no_of_courses" />

</LinearLayout>